k8s/microservice-uat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: zerofiltretech-uat
  name: zerofiltretech-blog-front-uat
spec:
  minReadySeconds: 30
  progressDeadlineSeconds: 120
  replicas: 1
  selector:
    matchLabels:
      app: zerofiltretech-blog-front-uat
  template:
    metadata:
      labels:
        app: zerofiltretech-blog-front-uat
    spec:
      containers:
        - name: zerofiltretech-blog-front-uat
          image: imzerofiltre/zerofiltretech-blog-front:0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  namespace: zerofiltretech-uat
  name: zerofiltretech-blog-front-uat
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: zerofiltretech-blog-front-uat
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: zerofiltretech-uat
  name: zerofiltretech-blog-front-uat
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: "blog-uat.zerofiltre.tech"
      http:
        paths:
          - path: /
            backend:
              serviceName: zerofiltretech-blog-front-uat
              servicePort: 80
  tls: # < placing a host in the TLS config will indicate a certificate should be created
    - hosts:
        - "blog-uat.zerofiltre.tech"
      secretName: zerofiltre-ingress-cert # < cert-manager will store the created certificate in this secret.
